code/typescript/ProcuretoPayAPISCIM/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay API: SCIM client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-procuretopayapiscim)](https://www.npmjs.com/package/@factset/sdk-procuretopayapiscim)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet's SCIM API implementation.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- Package version: 0.21.2
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-procuretopayapiscim
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-procuretopayapiscim
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:


```javascript
const { ApiClient, FileManagerAuditApi } = require('@factset/sdk-procuretopayapiscim');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new FileManagerAuditApi();

// Call api endpoint
apiInstance.fileManagerAuditGet().then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/scim/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*procuretopayapiscim.FileManagerAuditApi* | [**fileManagerAuditGet**](docs/FileManagerAuditApi.md#fileManagerAuditGet) | **GET** /FileManagerAudit | Get File Manager audit data.
*procuretopayapiscim.GroupsApi* | [**groupIdGet**](docs/GroupsApi.md#groupIdGet) | **GET** /Group/{id} | Get a group.
*procuretopayapiscim.GroupsApi* | [**groupIdPatch**](docs/GroupsApi.md#groupIdPatch) | **PATCH** /Group/{id} | Patch a group (add, replace, or remove attributes of a group.)
*procuretopayapiscim.GroupsApi* | [**groupIdPut**](docs/GroupsApi.md#groupIdPut) | **PUT** /Group/{id} | Replace a group.
*procuretopayapiscim.GroupsApi* | [**groupsGet**](docs/GroupsApi.md#groupsGet) | **GET** /Groups | Get a list of groups.
*procuretopayapiscim.LocationsApi* | [**locationsGet**](docs/LocationsApi.md#locationsGet) | **GET** /Locations | Get a list of locations.
*procuretopayapiscim.LocationsApi* | [**locationsIdGet**](docs/LocationsApi.md#locationsIdGet) | **GET** /Locations/{id} | Get a location.
*procuretopayapiscim.LocationsApi* | [**locationsIdPatch**](docs/LocationsApi.md#locationsIdPatch) | **PATCH** /Locations/{id} | Patch a location (add, replace, or remove attributes of a location.)
*procuretopayapiscim.LocationsApi* | [**locationsIdPut**](docs/LocationsApi.md#locationsIdPut) | **PUT** /Locations/{id} | Replace a location.
*procuretopayapiscim.ProductsApi* | [**productsGet**](docs/ProductsApi.md#productsGet) | **GET** /Products | Get a list of products.
*procuretopayapiscim.ProductsApi* | [**productsIdGet**](docs/ProductsApi.md#productsIdGet) | **GET** /Products/{id} | Get a product.
*procuretopayapiscim.SchemasApi* | [**schemasGet**](docs/SchemasApi.md#schemasGet) | **GET** /Schemas | Get a list of schemas.
*procuretopayapiscim.SchemasApi* | [**schemasIdGet**](docs/SchemasApi.md#schemasIdGet) | **GET** /Schemas/{id} | Get a schema.
*procuretopayapiscim.ServerConfigurationApi* | [**serviceProviderConfigGet**](docs/ServerConfigurationApi.md#serviceProviderConfigGet) | **GET** /ServiceProviderConfig | Get server configuration.
*procuretopayapiscim.UsersApi* | [**usersGet**](docs/UsersApi.md#usersGet) | **GET** /Users | Get a list of users.
*procuretopayapiscim.UsersApi* | [**usersIdDelete**](docs/UsersApi.md#usersIdDelete) | **DELETE** /Users/{id} | Delete a user
*procuretopayapiscim.UsersApi* | [**usersIdGet**](docs/UsersApi.md#usersIdGet) | **GET** /Users/{id} | Get a user.
*procuretopayapiscim.UsersApi* | [**usersIdPatch**](docs/UsersApi.md#usersIdPatch) | **PATCH** /Users/{id} | Patch a user (add, replace, or remove attributes of a user.)
*procuretopayapiscim.UsersApi* | [**usersIdPut**](docs/UsersApi.md#usersIdPut) | **PUT** /Users/{id} | Replace a user.
*procuretopayapiscim.UsersApi* | [**usersPost**](docs/UsersApi.md#usersPost) | **POST** /Users | Create a user.
*procuretopayapiscim.VermilionGroupsApi* | [**vermilionGroupsGet**](docs/VermilionGroupsApi.md#vermilionGroupsGet) | **GET** /VermilionGroups | Get a list of Vermilion groups.
*procuretopayapiscim.VermilionGroupsApi* | [**vermilionGroupsIdGet**](docs/VermilionGroupsApi.md#vermilionGroupsIdGet) | **GET** /VermilionGroups/{id} | Get a Vermilion group.
*procuretopayapiscim.VermilionGroupsApi* | [**vermilionGroupsIdPatch**](docs/VermilionGroupsApi.md#vermilionGroupsIdPatch) | **PATCH** /VermilionGroups/{id} | Patch a Vermilion group (add, replace, or remove attributes of a Vermilion group.)
*procuretopayapiscim.VermilionGroupsApi* | [**vermilionGroupsIdPut**](docs/VermilionGroupsApi.md#vermilionGroupsIdPut) | **PUT** /VermilionGroups/{id} | Replace a Vermilion group.
*procuretopayapiscim.VermilionUsersApi* | [**vermilionUsersGet**](docs/VermilionUsersApi.md#vermilionUsersGet) | **GET** /VermilionUsers | Get a list of Vermilion users.
*procuretopayapiscim.VermilionUsersApi* | [**vermilionUsersIdDelete**](docs/VermilionUsersApi.md#vermilionUsersIdDelete) | **DELETE** /VermilionUsers/{id} | Delete a Vermilion user.
*procuretopayapiscim.VermilionUsersApi* | [**vermilionUsersIdGet**](docs/VermilionUsersApi.md#vermilionUsersIdGet) | **GET** /VermilionUsers/{id} | Get a Vermilion user.
*procuretopayapiscim.VermilionUsersApi* | [**vermilionUsersIdPatch**](docs/VermilionUsersApi.md#vermilionUsersIdPatch) | **PATCH** /VermilionUsers/{id} | Patch a Vermilion user (add, replace, or remove attributes of a Vermilion user.)
*procuretopayapiscim.VermilionUsersApi* | [**vermilionUsersIdPut**](docs/VermilionUsersApi.md#vermilionUsersIdPut) | **PUT** /VermilionUsers/{id} | Replace a Vermilion user.
*procuretopayapiscim.VermilionUsersApi* | [**vermilionUsersPost**](docs/VermilionUsersApi.md#vermilionUsersPost) | **POST** /VermilionUsers | Create a Vermilion user.


## Documentation for Models

 - [procuretopayapiscim.Error](docs/Error.md)
 - [procuretopayapiscim.GroupResource](docs/GroupResource.md)
 - [procuretopayapiscim.GroupResourceList](docs/GroupResourceList.md)
 - [procuretopayapiscim.GroupResourceMembers](docs/GroupResourceMembers.md)
 - [procuretopayapiscim.GroupResourceMeta](docs/GroupResourceMeta.md)
 - [procuretopayapiscim.GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group.md)
 - [procuretopayapiscim.LocationResource](docs/LocationResource.md)
 - [procuretopayapiscim.LocationResourceList](docs/LocationResourceList.md)
 - [procuretopayapiscim.LocationResourceMeta](docs/LocationResourceMeta.md)
 - [procuretopayapiscim.LocationResourceReference](docs/LocationResourceReference.md)
 - [procuretopayapiscim.Patch](docs/Patch.md)
 - [procuretopayapiscim.PatchOperations](docs/PatchOperations.md)
 - [procuretopayapiscim.PendingProductOrder](docs/PendingProductOrder.md)
 - [procuretopayapiscim.ProductResource](docs/ProductResource.md)
 - [procuretopayapiscim.ProductResourceList](docs/ProductResourceList.md)
 - [procuretopayapiscim.ProductResourceMeta](docs/ProductResourceMeta.md)
 - [procuretopayapiscim.ProductResourceReference](docs/ProductResourceReference.md)
 - [procuretopayapiscim.Schema](docs/Schema.md)
 - [procuretopayapiscim.SchemaAttributes](docs/SchemaAttributes.md)
 - [procuretopayapiscim.SchemaList](docs/SchemaList.md)
 - [procuretopayapiscim.SchemaSubAttributes](docs/SchemaSubAttributes.md)
 - [procuretopayapiscim.ServiceProviderConfig](docs/ServiceProviderConfig.md)
 - [procuretopayapiscim.ServiceProviderConfigAuthenticationSchemes](docs/ServiceProviderConfigAuthenticationSchemes.md)
 - [procuretopayapiscim.ServiceProviderConfigBulk](docs/ServiceProviderConfigBulk.md)
 - [procuretopayapiscim.ServiceProviderConfigChangePassword](docs/ServiceProviderConfigChangePassword.md)
 - [procuretopayapiscim.ServiceProviderConfigEtag](docs/ServiceProviderConfigEtag.md)
 - [procuretopayapiscim.ServiceProviderConfigFilter](docs/ServiceProviderConfigFilter.md)
 - [procuretopayapiscim.ServiceProviderConfigPatch](docs/ServiceProviderConfigPatch.md)
 - [procuretopayapiscim.ServiceProviderConfigSort](docs/ServiceProviderConfigSort.md)
 - [procuretopayapiscim.UserResource](docs/UserResource.md)
 - [procuretopayapiscim.UserResourceGroups](docs/UserResourceGroups.md)
 - [procuretopayapiscim.UserResourceList](docs/UserResourceList.md)
 - [procuretopayapiscim.UserResourceMeta](docs/UserResourceMeta.md)
 - [procuretopayapiscim.UserResourceName](docs/UserResourceName.md)
 - [procuretopayapiscim.UserResourcePhoneNumbers](docs/UserResourcePhoneNumbers.md)
 - [procuretopayapiscim.UserResourceUrnScimSchemasExtensionCoreFactset10](docs/UserResourceUrnScimSchemasExtensionCoreFactset10.md)
 - [procuretopayapiscim.VermilionGroupResource](docs/VermilionGroupResource.md)
 - [procuretopayapiscim.VermilionGroupResourceList](docs/VermilionGroupResourceList.md)
 - [procuretopayapiscim.VermilionGroupResourceMembers](docs/VermilionGroupResourceMembers.md)
 - [procuretopayapiscim.VermilionGroupResourceMeta](docs/VermilionGroupResourceMeta.md)
 - [procuretopayapiscim.VermilionUserResource](docs/VermilionUserResource.md)
 - [procuretopayapiscim.VermilionUserResourceEmails](docs/VermilionUserResourceEmails.md)
 - [procuretopayapiscim.VermilionUserResourceEntitlements](docs/VermilionUserResourceEntitlements.md)
 - [procuretopayapiscim.VermilionUserResourceGroups](docs/VermilionUserResourceGroups.md)
 - [procuretopayapiscim.VermilionUserResourceList](docs/VermilionUserResourceList.md)
 - [procuretopayapiscim.VermilionUserResourceMeta](docs/VermilionUserResourceMeta.md)
 - [procuretopayapiscim.VermilionUserResourceName](docs/VermilionUserResourceName.md)
 - [procuretopayapiscim.VermilionUserResourcePhoneNumbers](docs/VermilionUserResourcePhoneNumbers.md)
 - [procuretopayapiscim.VermilionUserResourcePhotos](docs/VermilionUserResourcePhotos.md)
 - [procuretopayapiscim.VermilionUserResourceRoles](docs/VermilionUserResourceRoles.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
