code/typescript/ProcuretoPayAPISCIM/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay API: SCIM client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v2.7.0-blue)](https://developer.factset.com/api-catalog/procure-to-pay-api-scim)
[![npm](https://img.shields.io/badge/npm-v0.24.0-orange)](https://www.npmjs.com/package/@factset/sdk-procuretopayapiscim/v/0.24.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet's SCIM API implementation.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.7.0
- SDK version: 0.24.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-procuretopayapiscim@0.24.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-procuretopayapiscim@0.24.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, FederationsApi } = require('@factset/sdk-procuretopayapiscim');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new FederationsApi();
const id = "id_example"; // String | ID of resource.
const opts = {
  'attributes': ["null"], // [String] | Attribute whitelist filter string. A comma-separated list of resource attribute names to be returned in the response, overriding the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *excludedAttributes* or *additionalAttributes* parameters.
  'excludedAttributes': ["null"], // [String] | Attribute blacklist filter string. A comma-separated list of resource attribute names to be excluded in the response, overriding the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *attributes* or *additionalAttributes* parameters.
  'additionalAttributes': ["null"] // [String] | Non-standard attribute filter string. A comma-separated list of resource attribute names to be included in the response, complementing the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *attributes* or *excludedAttributes* parameters.
};

// Call api endpoint
apiInstance.getFederation(id, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-procuretopayapiscim');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/scim/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*procuretopayapiscim.FederationsApi* | [**getFederation**](docs/FederationsApi.md#getFederation) | **GET** /Federations/{id} | Get a federation.
*procuretopayapiscim.FederationsApi* | [**getFederations**](docs/FederationsApi.md#getFederations) | **GET** /Federations | Get a list of federations.
*procuretopayapiscim.FederationsApi* | [**modifyFederation**](docs/FederationsApi.md#modifyFederation) | **PATCH** /Federations/{id} | Patch a federation.
*procuretopayapiscim.FederationsApi* | [**replaceFederation**](docs/FederationsApi.md#replaceFederation) | **PUT** /Federations/{id} | Replace a federation.
*procuretopayapiscim.FileManagerAuditApi* | [**getFileManagerAudit**](docs/FileManagerAuditApi.md#getFileManagerAudit) | **GET** /FileManagerAudit | Get File Manager audit data.
*procuretopayapiscim.FirmDescriptionsApi* | [**getFirmDescription**](docs/FirmDescriptionsApi.md#getFirmDescription) | **GET** /FirmDescriptions/{id} | Get a firm description.
*procuretopayapiscim.FirmDescriptionsApi* | [**getFirmDescriptions**](docs/FirmDescriptionsApi.md#getFirmDescriptions) | **GET** /FirmDescriptions | Get a list of firm descriptions.
*procuretopayapiscim.GroupsApi* | [**getGroup**](docs/GroupsApi.md#getGroup) | **GET** /Group/{id} | Get a group.
*procuretopayapiscim.GroupsApi* | [**getGroups**](docs/GroupsApi.md#getGroups) | **GET** /Groups | Get a list of groups.
*procuretopayapiscim.GroupsApi* | [**modifyGroup**](docs/GroupsApi.md#modifyGroup) | **PATCH** /Group/{id} | Patch a group.
*procuretopayapiscim.GroupsApi* | [**replaceGroup**](docs/GroupsApi.md#replaceGroup) | **PUT** /Group/{id} | Replace a group.
*procuretopayapiscim.LocationsApi* | [**createLocation**](docs/LocationsApi.md#createLocation) | **POST** /Locations | Create a location.
*procuretopayapiscim.LocationsApi* | [**getLocation**](docs/LocationsApi.md#getLocation) | **GET** /Locations/{id} | Get a location.
*procuretopayapiscim.LocationsApi* | [**getLocations**](docs/LocationsApi.md#getLocations) | **GET** /Locations | Get a list of locations.
*procuretopayapiscim.LocationsApi* | [**modifyLocation**](docs/LocationsApi.md#modifyLocation) | **PATCH** /Locations/{id} | Patch a location.
*procuretopayapiscim.LocationsApi* | [**replaceLocation**](docs/LocationsApi.md#replaceLocation) | **PUT** /Locations/{id} | Replace a location.
*procuretopayapiscim.ProductsApi* | [**getProduct**](docs/ProductsApi.md#getProduct) | **GET** /Products/{id} | Get a product.
*procuretopayapiscim.ProductsApi* | [**getProducts**](docs/ProductsApi.md#getProducts) | **GET** /Products | Get a list of products.
*procuretopayapiscim.SchemasApi* | [**getSchema**](docs/SchemasApi.md#getSchema) | **GET** /Schemas/{id} | Get a schema.
*procuretopayapiscim.SchemasApi* | [**getSchemas**](docs/SchemasApi.md#getSchemas) | **GET** /Schemas | Get a list of schemas.
*procuretopayapiscim.ServiceProviderConfigurationApi* | [**getServiceProviderConfig**](docs/ServiceProviderConfigurationApi.md#getServiceProviderConfig) | **GET** /ServiceProviderConfig | Get service provider configuration.
*procuretopayapiscim.UserClassesApi* | [**getUserClass**](docs/UserClassesApi.md#getUserClass) | **GET** /UserClasses/{id} | Get a user class.
*procuretopayapiscim.UserClassesApi* | [**getUserClasses**](docs/UserClassesApi.md#getUserClasses) | **GET** /UserClasses | Get a list of user classes.
*procuretopayapiscim.UserPositionsApi* | [**getUserPosition**](docs/UserPositionsApi.md#getUserPosition) | **GET** /UserPositions/{id} | Get a user position.
*procuretopayapiscim.UserPositionsApi* | [**getUserPositions**](docs/UserPositionsApi.md#getUserPositions) | **GET** /UserPositions | Get a list of user positions.
*procuretopayapiscim.UsersApi* | [**createUser**](docs/UsersApi.md#createUser) | **POST** /Users | Create a user.
*procuretopayapiscim.UsersApi* | [**deleteUser**](docs/UsersApi.md#deleteUser) | **DELETE** /Users/{id} | Delete a user.
*procuretopayapiscim.UsersApi* | [**getUser**](docs/UsersApi.md#getUser) | **GET** /Users/{id} | Get a user.
*procuretopayapiscim.UsersApi* | [**getUsers**](docs/UsersApi.md#getUsers) | **GET** /Users | Get a list of users.
*procuretopayapiscim.UsersApi* | [**modifyUser**](docs/UsersApi.md#modifyUser) | **PATCH** /Users/{id} | Patch a user.
*procuretopayapiscim.UsersApi* | [**replaceUser**](docs/UsersApi.md#replaceUser) | **PUT** /Users/{id} | Replace a user.


## Documentation for Models

 - [procuretopayapiscim.AuthenticationScheme](docs/AuthenticationScheme.md)
 - [procuretopayapiscim.Error](docs/Error.md)
 - [procuretopayapiscim.ErrorUrnScimSchemasExtensionFactSetCore10Error](docs/ErrorUrnScimSchemasExtensionFactSetCore10Error.md)
 - [procuretopayapiscim.FederationResource](docs/FederationResource.md)
 - [procuretopayapiscim.FederationResourceList](docs/FederationResourceList.md)
 - [procuretopayapiscim.FederationResourceLocation](docs/FederationResourceLocation.md)
 - [procuretopayapiscim.FederationResourceReference](docs/FederationResourceReference.md)
 - [procuretopayapiscim.FederationResourceReferenceAssertionValue](docs/FederationResourceReferenceAssertionValue.md)
 - [procuretopayapiscim.FederationResourceUser](docs/FederationResourceUser.md)
 - [procuretopayapiscim.FederationResourceUserAssertionValue](docs/FederationResourceUserAssertionValue.md)
 - [procuretopayapiscim.FileManagerAuditItem](docs/FileManagerAuditItem.md)
 - [procuretopayapiscim.FileManagerAuditItemAdditionalProperty](docs/FileManagerAuditItemAdditionalProperty.md)
 - [procuretopayapiscim.FileManagerAuditItemAdditionalPropertyEntity](docs/FileManagerAuditItemAdditionalPropertyEntity.md)
 - [procuretopayapiscim.FileManagerAuditItemAdditionalPropertyPermissionOverride](docs/FileManagerAuditItemAdditionalPropertyPermissionOverride.md)
 - [procuretopayapiscim.FileManagerAuditItemAdditionalPropertyPermissions](docs/FileManagerAuditItemAdditionalPropertyPermissions.md)
 - [procuretopayapiscim.FirmDescriptionResource](docs/FirmDescriptionResource.md)
 - [procuretopayapiscim.FirmDescriptionResourceList](docs/FirmDescriptionResourceList.md)
 - [procuretopayapiscim.FirmDescriptionResourceMeta](docs/FirmDescriptionResourceMeta.md)
 - [procuretopayapiscim.FirmDescriptionResourceReference](docs/FirmDescriptionResourceReference.md)
 - [procuretopayapiscim.GroupResource](docs/GroupResource.md)
 - [procuretopayapiscim.GroupResourceList](docs/GroupResourceList.md)
 - [procuretopayapiscim.GroupResourceMember](docs/GroupResourceMember.md)
 - [procuretopayapiscim.GroupResourceMeta](docs/GroupResourceMeta.md)
 - [procuretopayapiscim.GroupResourceUrnScimSchemasExtensionFactSetCore10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetCore10Group.md)
 - [procuretopayapiscim.GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group.md)
 - [procuretopayapiscim.GroupResourceUrnScimSchemasExtensionFactSetVRS10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetVRS10Group.md)
 - [procuretopayapiscim.InlineResponse429](docs/InlineResponse429.md)
 - [procuretopayapiscim.LocationResource](docs/LocationResource.md)
 - [procuretopayapiscim.LocationResourceCompanyAgreementUrl](docs/LocationResourceCompanyAgreementUrl.md)
 - [procuretopayapiscim.LocationResourceFirmDescription](docs/LocationResourceFirmDescription.md)
 - [procuretopayapiscim.LocationResourceList](docs/LocationResourceList.md)
 - [procuretopayapiscim.LocationResourceMainLocation](docs/LocationResourceMainLocation.md)
 - [procuretopayapiscim.LocationResourceManagingLocation](docs/LocationResourceManagingLocation.md)
 - [procuretopayapiscim.LocationResourceMeta](docs/LocationResourceMeta.md)
 - [procuretopayapiscim.LocationResourceReference](docs/LocationResourceReference.md)
 - [procuretopayapiscim.Patch](docs/Patch.md)
 - [procuretopayapiscim.PatchOperation](docs/PatchOperation.md)
 - [procuretopayapiscim.PatchOperationValue](docs/PatchOperationValue.md)
 - [procuretopayapiscim.PendingProductOrder](docs/PendingProductOrder.md)
 - [procuretopayapiscim.ProductResource](docs/ProductResource.md)
 - [procuretopayapiscim.ProductResourceList](docs/ProductResourceList.md)
 - [procuretopayapiscim.ProductResourceMeta](docs/ProductResourceMeta.md)
 - [procuretopayapiscim.ProductResourceReference](docs/ProductResourceReference.md)
 - [procuretopayapiscim.ProductResourceReferenceWithRapidActivationInfo](docs/ProductResourceReferenceWithRapidActivationInfo.md)
 - [procuretopayapiscim.Schema](docs/Schema.md)
 - [procuretopayapiscim.SchemaAttribute](docs/SchemaAttribute.md)
 - [procuretopayapiscim.SchemaList](docs/SchemaList.md)
 - [procuretopayapiscim.SchemaMeta](docs/SchemaMeta.md)
 - [procuretopayapiscim.SchemaSubAttribute](docs/SchemaSubAttribute.md)
 - [procuretopayapiscim.ServiceProviderConfig](docs/ServiceProviderConfig.md)
 - [procuretopayapiscim.ServiceProviderConfigBulk](docs/ServiceProviderConfigBulk.md)
 - [procuretopayapiscim.ServiceProviderConfigChangePassword](docs/ServiceProviderConfigChangePassword.md)
 - [procuretopayapiscim.ServiceProviderConfigEtag](docs/ServiceProviderConfigEtag.md)
 - [procuretopayapiscim.ServiceProviderConfigFilter](docs/ServiceProviderConfigFilter.md)
 - [procuretopayapiscim.ServiceProviderConfigPatch](docs/ServiceProviderConfigPatch.md)
 - [procuretopayapiscim.ServiceProviderConfigSort](docs/ServiceProviderConfigSort.md)
 - [procuretopayapiscim.UserClassResource](docs/UserClassResource.md)
 - [procuretopayapiscim.UserClassResourceList](docs/UserClassResourceList.md)
 - [procuretopayapiscim.UserClassResourceMeta](docs/UserClassResourceMeta.md)
 - [procuretopayapiscim.UserClassResourceReference](docs/UserClassResourceReference.md)
 - [procuretopayapiscim.UserPositionResource](docs/UserPositionResource.md)
 - [procuretopayapiscim.UserPositionResourceList](docs/UserPositionResourceList.md)
 - [procuretopayapiscim.UserPositionResourceMeta](docs/UserPositionResourceMeta.md)
 - [procuretopayapiscim.UserPositionResourceReference](docs/UserPositionResourceReference.md)
 - [procuretopayapiscim.UserResource](docs/UserResource.md)
 - [procuretopayapiscim.UserResourceGroup](docs/UserResourceGroup.md)
 - [procuretopayapiscim.UserResourceList](docs/UserResourceList.md)
 - [procuretopayapiscim.UserResourceMeta](docs/UserResourceMeta.md)
 - [procuretopayapiscim.UserResourceName](docs/UserResourceName.md)
 - [procuretopayapiscim.UserResourcePhoneNumber](docs/UserResourcePhoneNumber.md)
 - [procuretopayapiscim.UserResourceUrnScimSchemasExtensionFactSetCore10User](docs/UserResourceUrnScimSchemasExtensionFactSetCore10User.md)
 - [procuretopayapiscim.UserResourceUrnScimSchemasExtensionFactSetCore10UserUserTaxonomyData](docs/UserResourceUrnScimSchemasExtensionFactSetCore10UserUserTaxonomyData.md)
 - [procuretopayapiscim.UserResourceUrnScimSchemasExtensionFactSetVRS10User](docs/UserResourceUrnScimSchemasExtensionFactSetVRS10User.md)
 - [procuretopayapiscim.UserResourceVRSDomainData](docs/UserResourceVRSDomainData.md)
 - [procuretopayapiscim.UserResourceVRSDomainDataTenancies](docs/UserResourceVRSDomainDataTenancies.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
